# QtQQ

./: CMakeLists.txt  basicwindow.cpp  basicwindow.h  ccmainwindow.cpp  ccmainwindow.cpp.autosave  ccmainwindow.h  ccmainwindow.qrc  ccmainwindow.ui  commonutils.cpp  commonutils.h  contactitem.cpp  contactitem.h  contactitem.ui  custommenu.cpp  custommenu.h  emotionlabelitem.cpp  emotionlabelitem.h  emotionwindow.cpp  emotionwindow.h  emotionwindow.ui  main.cpp  msgwebview.cpp  msgwebview.h  notifymanager.cpp  notifymanager.h  qclicklabel.cpp  qclicklabel.h  qmsgtextedit.cpp  qmsgtextedit.h  qtqq.sql  receivefile.cpp  receivefile.h  receivefile.ui  rootcontactitem.cpp  rootcontactitem.h  sendfile.cpp  sendfile.h  sendfile.ui  skinwindow.cpp  skinwindow.h  (+19 more)
.VSCodeCounter/2024-08-25_14-45-44/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
QtQQ_Server/: CMakeLists.txt  main.cpp  qtqqserver.cpp  qtqqserver.h  qtqqserver.ui  resources.qrc  tcpserver.cpp  tcpserver.h  tcpsocket.cpp  tcpsocket.h
Resources/MainWindow/MsgHtml/: msgleftTmpl.html  msgrightTmpl.html  msgtmpl.js
Resources/QSS/: CCMainWindow.css  EmotionWindow.css  ReceiveFile.css  SendFile.css  SkinWindow.css  TalkWindow.css  Title.css  UserLogin.css
